--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "terminal.integrated.env.windows": 
     {
-        "path": "${env:Path};C:\\Python\\;C:\\Program Files\\Git\\cmd"        
+        "path": "${env:Path};C:\\Python\\;C:\\Program Files\\Git\\cmd;C:\\Python\\Lib;C:\\Python\\Scripts"        
     },
     "python.linting.enabled": false
 }
