--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "terminal.integrated.env.windows": 
     {
-        "path": "${env:Path};C:\\Python\\;C:\\Program Files\\Git\\cmd;C:\\Python\\Lib;C:\\Python\\Scripts"        
+        "path": "${env:Path};C:\\Program Files\\Python37-32\\;C:\\Program Files\\Git\\cmd;C:\\Program Files\\Python37-32\\Lib;C:\\Program Files\\Python37-32\\Scripts"        
     },
     "python.linting.enabled": false
 }
