--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
         "path": "${env:Path};C:\\Program Files\\Python37-32\\;C:\\Program Files\\Git\\cmd;C:\\Program Files\\Python37-32\\Lib;C:\\Program Files\\Python37-32\\Scripts"        
     },
     "python.linting.enabled": false,
-    "git.autofetch":true
+    "git.autofetch":true,
+    "python.pythonPath": "C:\\Program Files\\Python37-32\\" 
 }
