--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -32,7 +32,7 @@
         },
         {
             "label": "Fisrt Setting",
-            "dependsOn": ["Set Email", "Set Name","Set pip"],
+            "dependsOn": ["Set Email", "Set Name"],
             "problemMatcher": []
         }
     ]
